force-app/main/default/objects/CA_Customer_Assessment__c/fields/Customer_Stratification__c.field-meta.xml
<CustomField>
    <fullName>Customer_Stratification__c</fullName>
    <formula>TEXT(TP_Account__r.Segment__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Stratification</label>
    <type>Text</type>
</CustomField>