force-app/main/default/objects/CA_Customer_Assessment__c/fields/Customer_Web_Site_Link__c.field-meta.xml
<CustomField>
    <fullName>Customer_Web_Site_Link__c</fullName>
    <label>Customer Web Site Link</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Informational Only</fullName>
            </value>
            <value>
                <fullName>Review Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>