force-app/main/default/objects/CA_Customer_Assessment__c/fields/Customer_Web_Site_Link_Description__c.field-meta.xml
<CustomField>
    <fullName>Customer_Web_Site_Link_Description__c</fullName>
    <label>Customer Web Site Link Description</label>
    <type>TextArea</type>
</CustomField>