force-app/main/default/objects/CA_Customer_Assessment__c/fields/Cutting__c.field-meta.xml
<CustomField>
    <fullName>Cutting__c</fullName>
    <label>Cutting</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>