force-app/main/default/objects/CA_Customer_Assessment__c/fields/Cutting_Description__c.field-meta.xml
<CustomField>
    <fullName>Cutting_Description__c</fullName>
    <label>Cutting Description</label>
    <type>TextArea</type>
</CustomField>