force-app/main/default/objects/CA_Customer_Assessment__c/fields/CuttingExternalDescription__c.field-meta.xml
<CustomField>
    <fullName>CuttingExternalDescription__c</fullName>
    <label>Cutting - External Description</label>
    <type>TextArea</type>
</CustomField>