force-app/main/default/objects/CA_Customer_Assessment__c/fields/CuttingInternalDescription__c.field-meta.xml
<CustomField>
    <fullName>CuttingInternalDescription__c</fullName>
    <label>Cutting - Internal Description</label>
    <type>TextArea</type>
</CustomField>