force-app/main/default/objects/CA_Customer_Assessment__c/fields/CX_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>CX_Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Enter the name of the CX person reviewing Customer Assessment</description>
    <label>CX Reviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CA_Customer_Assessment</relationshipName>
    <type>Lookup</type>
</CustomField>