force-app/main/default/objects/CA_Customer_Assessment__c/fields/CXP_Manager__c.field-meta.xml
<CustomField>
    <fullName>CXP_Manager__c</fullName>
    <formula>TP_Account__r.ANI_Primary__r.name_team_lead__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CXP Manager</label>
    <type>Text</type>
</CustomField>