force-app/main/default/objects/CA_Customer_Assessment__c/fields/CXP_Primary__c.field-meta.xml
<CustomField>
    <fullName>CXP_Primary__c</fullName>
    <formula>TP_Account__r.ANI_Primary__r.FirstName &amp; &quot; &quot; &amp;  TP_Account__r.ANI_Primary__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CXP Primary</label>
    <type>Text</type>
</CustomField>