force-app/main/default/objects/CA_Customer_Assessment__c/fields/Delivery_Windows__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Windows__c</fullName>
    <label>Delivery Windows</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Informational Only</fullName>
            </value>
            <value>
                <fullName>Review Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>