force-app/main/default/objects/CA_Customer_Assessment__c/fields/Delivery_Windows_Description__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Windows_Description__c</fullName>
    <label>Delivery Windows Description</label>
    <type>TextArea</type>
</CustomField>