force-app/main/default/objects/CA_Customer_Assessment__c/fields/Directed_Buy__c.field-meta.xml
<CustomField>
    <fullName>Directed_Buy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Directed Buy</label>
    <type>Checkbox</type>
</CustomField>