force-app/main/default/objects/CA_Customer_Assessment__c/fields/EDI_Description__c.field-meta.xml
<CustomField>
    <fullName>EDI_Description__c</fullName>
    <label>EDI Description</label>
    <type>TextArea</type>
</CustomField>