force-app/main/default/objects/CA_Customer_Assessment__c/fields/eInvoice__c.field-meta.xml
<CustomField>
    <fullName>eInvoice__c</fullName>
    <label>eInvoice</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Informational Only</fullName>
            </value>
            <value>
                <fullName>Review Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>