force-app/main/default/objects/CA_Customer_Assessment__c/fields/eInvoice_Description__c.field-meta.xml
<CustomField>
    <fullName>eInvoice_Description__c</fullName>
    <label>eInvoice Description</label>
    <type>TextArea</type>
</CustomField>