force-app/main/default/objects/CA_Customer_Assessment__c/fields/Enterprise_Account__c.field-meta.xml
<CustomField>
    <fullName>Enterprise_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enterprise Account?</label>
    <type>Checkbox</type>
</CustomField>