force-app/main/default/objects/CA_Customer_Assessment__c/fields/Enterprise_Street__c.field-meta.xml
<CustomField>
    <fullName>Enterprise_Street__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enterprise (Street)?</label>
    <type>Checkbox</type>
</CustomField>