force-app/main/default/objects/CA_Customer_Assessment__c/fields/Enterprise_Street_Description__c.field-meta.xml
<CustomField>
    <fullName>Enterprise_Street_Description__c</fullName>
    <label>Enterprise Account? Description</label>
    <type>TextArea</type>
</CustomField>