force-app/main/default/objects/CA_Customer_Assessment__c/fields/Facility_Supplies_Description__c.field-meta.xml
<CustomField>
    <fullName>Facility_Supplies_Description__c</fullName>
    <label>Facility Supplies Description</label>
    <type>TextArea</type>
</CustomField>