force-app/main/default/objects/CA_Customer_Assessment__c/fields/Financial_Performance__c.field-meta.xml
<CustomField>
    <fullName>Financial_Performance__c</fullName>
    <description>What insight have yo gained into their strategic goals and opportunities?</description>
    <inlineHelpText>What insight have yo gained into their strategic goals and opportunities?</inlineHelpText>
    <label>Financial Performance</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>