force-app/main/default/objects/CA_Customer_Assessment__c/fields/Fixed_Description__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Description__c</fullName>
    <label>Fixed Description</label>
    <type>TextArea</type>
</CustomField>