force-app/main/default/objects/CA_Customer_Assessment__c/fields/Follow_up_Description_1__c.field-meta.xml
<CustomField>
    <fullName>Follow_up_Description_1__c</fullName>
    <label>Follow-up Description 1</label>
    <type>TextArea</type>
</CustomField>