force-app/main/default/objects/CA_Customer_Assessment__c/fields/FSC_Certified_COC__c.field-meta.xml
<CustomField>
    <fullName>FSC_Certified_COC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FSC - Certified (COC)</label>
    <type>Checkbox</type>
</CustomField>