force-app/main/default/objects/CA_Customer_Assessment__c/fields/GeneralCommentsDescription_Ebusiness__c.field-meta.xml
<CustomField>
    <fullName>GeneralCommentsDescription_Ebusiness__c</fullName>
    <label>General Comments Description ebus</label>
    <type>TextArea</type>
</CustomField>