force-app/main/default/objects/CA_Customer_Assessment__c/fields/GeneralCommentsDescription_Finacial__c.field-meta.xml
<CustomField>
    <fullName>GeneralCommentsDescription_Finacial__c</fullName>
    <label>General Comments Description financial</label>
    <type>TextArea</type>
</CustomField>