force-app/main/default/objects/CA_Customer_Assessment__c/fields/GeneralCommentsDescription_Pricing__c.field-meta.xml
<CustomField>
    <fullName>GeneralCommentsDescription_Pricing__c</fullName>
    <label>General Comments Description</label>
    <type>TextArea</type>
</CustomField>