force-app/main/default/objects/CA_Customer_Assessment__c/fields/GTM_Margin_Description__c.field-meta.xml
<CustomField>
    <fullName>GTM_Margin_Description__c</fullName>
    <label>GTM/Margin Description</label>
    <type>TextArea</type>
</CustomField>