force-app/main/default/objects/CA_Customer_Assessment__c/fields/Headquarters_and_Other_Locations__c.field-meta.xml
<CustomField>
    <fullName>Headquarters_and_Other_Locations__c</fullName>
    <description>Where is the company located? Are they multi-location or just one main office? Do they have multiple headquarters?</description>
    <inlineHelpText>Where is the company located? Are they multi-location or just one main office? Do they have multiple headquarters?</inlineHelpText>
    <label>Headquarters and Other Locations</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>