force-app/main/default/objects/CA_Customer_Assessment__c/fields/Identify_Users_Approvers_Description__c.field-meta.xml
<CustomField>
    <fullName>Identify_Users_Approvers_Description__c</fullName>
    <label>Identify Users - Approvers Description</label>
    <type>TextArea</type>
</CustomField>