force-app/main/default/objects/CA_Customer_Assessment__c/fields/International_Shipments_Description__c.field-meta.xml
<CustomField>
    <fullName>International_Shipments_Description__c</fullName>
    <label>International Shipments Description</label>
    <type>TextArea</type>
</CustomField>