force-app/main/default/objects/CA_Customer_Assessment__c/fields/Invoice_Requirements_anything_special__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Requirements_anything_special__c</fullName>
    <label>Invoice Requirements - anything special</label>
    <type>TextArea</type>
</CustomField>