force-app/main/default/objects/CA_Customer_Assessment__c/fields/Kitting_Description__c.field-meta.xml
<CustomField>
    <fullName>Kitting_Description__c</fullName>
    <inlineHelpText>Please elaborate on the kitting elements for this customer</inlineHelpText>
    <label>Kitting Description</label>
    <type>TextArea</type>
</CustomField>