force-app/main/default/objects/CA_Customer_Assessment__c/fields/KittingExternalDescription__c.field-meta.xml
<CustomField>
    <fullName>KittingExternalDescription__c</fullName>
    <label>Kitting - External Description</label>
    <type>TextArea</type>
</CustomField>