force-app/main/default/objects/CA_Customer_Assessment__c/fields/KittingInternalDescription__c.field-meta.xml
<CustomField>
    <fullName>KittingInternalDescription__c</fullName>
    <inlineHelpText>Please elaborate on the kitting elements for this customer</inlineHelpText>
    <label>Kitting - Internal Description</label>
    <type>TextArea</type>
</CustomField>