force-app/main/default/objects/CA_Customer_Assessment__c/fields/Labeling_Description__c.field-meta.xml
<CustomField>
    <fullName>Labeling_Description__c</fullName>
    <label>Labeling Description</label>
    <type>TextArea</type>
</CustomField>