force-app/main/default/objects/CA_Customer_Assessment__c/fields/Leased_Description__c.field-meta.xml
<CustomField>
    <fullName>Leased_Description__c</fullName>
    <label>Leased? Description</label>
    <type>TextArea</type>
</CustomField>