force-app/main/default/objects/CA_Customer_Assessment__c/fields/Legacy_System_Code__c.field-meta.xml
<CustomField>
    <fullName>Legacy_System_Code__c</fullName>
    <formula>TP_Account__r.Legacy_System_Cd__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Legacy System Code</label>
    <type>Text</type>
</CustomField>