force-app/main/default/objects/CA_Customer_Assessment__c/fields/Local_Account__c.field-meta.xml
<CustomField>
    <fullName>Local_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Local Account</label>
    <type>Checkbox</type>
</CustomField>