force-app/main/default/objects/CA_Customer_Assessment__c/fields/Local_Account_Description__c.field-meta.xml
<CustomField>
    <fullName>Local_Account_Description__c</fullName>
    <label>Local Account Description</label>
    <type>TextArea</type>
</CustomField>