force-app/main/default/objects/CA_Customer_Assessment__c/fields/Lost_Business__c.field-meta.xml
<CustomField>
    <fullName>Lost_Business__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lost Business</label>
    <type>Checkbox</type>
</CustomField>