force-app/main/default/objects/CA_Customer_Assessment__c/fields/Lot_Management_Description__c.field-meta.xml
<CustomField>
    <fullName>Lot_Management_Description__c</fullName>
    <label>Lot Management Description</label>
    <type>TextArea</type>
</CustomField>