force-app/main/default/objects/CA_Customer_Assessment__c/fields/Mark_Up_Description__c.field-meta.xml
<CustomField>
    <fullName>Mark_Up_Description__c</fullName>
    <label>Mark-Up Description</label>
    <type>TextArea</type>
</CustomField>