force-app/main/default/objects/CA_Customer_Assessment__c/fields/MILs_Description__c.field-meta.xml
<CustomField>
    <fullName>MILs_Description__c</fullName>
    <label>MILs Description</label>
    <type>TextArea</type>
</CustomField>