force-app/main/default/objects/CA_Customer_Assessment__c/fields/MILs_How_Many__c.field-meta.xml
<CustomField>
    <fullName>MILs_How_Many__c</fullName>
    <label>MILs - How Many?</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>