force-app/main/default/objects/CA_Customer_Assessment__c/fields/Mission_and_Vision_Statement__c.field-meta.xml
<CustomField>
    <fullName>Mission_and_Vision_Statement__c</fullName>
    <description>A company&apos;s mission, vision and values can generally be found on the company website and can give you a critical understanding of their goals and culture.</description>
    <inlineHelpText>A company&apos;s mission, vision and values can generally be found on the company website and can give you a critical understanding of their goals and culture.</inlineHelpText>
    <label>Mission and Vision Statement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>