force-app/main/default/objects/CA_Customer_Assessment__c/fields/MLA_Account__c.field-meta.xml
<CustomField>
    <fullName>MLA_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MLA Account</label>
    <type>Checkbox</type>
</CustomField>