force-app/main/default/objects/CA_Customer_Assessment__c/fields/MLA_Description__c.field-meta.xml
<CustomField>
    <fullName>MLA_Description__c</fullName>
    <label>MLA? Description</label>
    <type>TextArea</type>
</CustomField>