force-app/main/default/objects/CA_Customer_Assessment__c/fields/MLAAcctRepOwner__c.field-meta.xml
<CustomField>
    <fullName>MLAAcctRepOwner__c</fullName>
    <label>MLA Acct Rep Owner</label>
    <length>15</length>
    <type>Text</type>
</CustomField>