force-app/main/default/objects/CA_Customer_Assessment__c/fields/MLAComments__c.field-meta.xml
<CustomField>
    <fullName>MLAComments__c</fullName>
    <label>MLA Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>