force-app/main/default/objects/CA_Customer_Assessment__c/fields/MLAStatus__c.field-meta.xml
<CustomField>
    <fullName>MLAStatus__c</fullName>
    <label>MLA Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>