force-app/main/default/objects/CA_Customer_Assessment__c/fields/National_Account__c.field-meta.xml
<CustomField>
    <fullName>National_Account__c</fullName>
    <label>National Account?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Informational Only</fullName>
            </value>
            <value>
                <fullName>Review Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>