force-app/main/default/objects/CA_Customer_Assessment__c/fields/National_Account_Description__c.field-meta.xml
<CustomField>
    <fullName>National_Account_Description__c</fullName>
    <label>National Account? Description</label>
    <type>TextArea</type>
</CustomField>