force-app/main/default/objects/CA_Customer_Assessment__c/fields/National_Account_Status__c.field-meta.xml
<CustomField>
    <fullName>National_Account_Status__c</fullName>
    <formula>TP_Account__r.National_Account_Status__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>National Account Status</label>
    <type>Text</type>
</CustomField>