force-app/main/default/objects/CA_Customer_Assessment__c/fields/Onsite_Embedded_Employees__c.field-meta.xml
<CustomField>
    <fullName>Onsite_Embedded_Employees__c</fullName>
    <label>Onsite/Embedded Employees</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>