force-app/main/default/objects/CA_Customer_Assessment__c/fields/Onsite_Embedded_Employees_Description__c.field-meta.xml
<CustomField>
    <fullName>Onsite_Embedded_Employees_Description__c</fullName>
    <label>Onsite/Embedded Employees Description</label>
    <type>TextArea</type>
</CustomField>