force-app/main/default/objects/CA_Customer_Assessment__c/fields/Operations_Follow_up_Needed__c.field-meta.xml
<CustomField>
    <fullName>Operations_Follow_up_Needed__c</fullName>
    <label>Operations Follow-up Needed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>