force-app/main/default/objects/CA_Customer_Assessment__c/fields/Order_Guide_Description__c.field-meta.xml
<CustomField>
    <fullName>Order_Guide_Description__c</fullName>
    <label>Order Guide Description</label>
    <type>TextArea</type>
</CustomField>