force-app/main/default/objects/CA_Customer_Assessment__c/fields/Order_Line_Description__c.field-meta.xml
<CustomField>
    <fullName>Order_Line_Description__c</fullName>
    <label>Order Line Description</label>
    <type>TextArea</type>
</CustomField>