force-app/main/default/objects/CA_Customer_Assessment__c/fields/Overlap_Customer__c.field-meta.xml
<CustomField>
    <fullName>Overlap_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Overlap Customer?</label>
    <type>Checkbox</type>
</CustomField>