force-app/main/default/objects/CA_Customer_Assessment__c/fields/OverlapVOSSFDAccountNumber__c.field-meta.xml
<CustomField>
    <fullName>OverlapVOSSFDAccountNumber__c</fullName>
    <label>Overlap VOS/SFD Account Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>